# Django

Board1_form/: db.sqlite3  manage.py  pyproject.toml
Board1_form/Board1/: settings.py  urls.py
Board1_form/templates/: header.html
Board1_form/templates/registration/: edit_user.html  login.html
Board1_form/templates/todolist/: base.html  create_post.html  home.html  list.html  list_comments.html  list_user.html
Board1_form/todolist/: admin.py  cls_views.py  forms.py  models.py  urls.py  views.py
Board1_form/todolist/migrations/: 0001_initial.py  0003_tag_post_tags.py
Board1_form/user/: admin.py  forms.py  models.py  urls.py  views.py
Board1_form/user/migrations/: 0002_user_avatar.py
DiplomProject/: .dockerignore  .gitignore  Dockerfile  Dockerfile_OLD  backend.sh  celery-beat.sh  docker-compose.yaml  manage.py  pyproject.toml
DiplomProject/DiplomProject/: asgi.py  celery.py  client_secrets.json  main.py  my_email.py  settings.py  tasks.py  urls.py  wsgi.py
DiplomProject/events/: forms.py  models.py  urls.py  views.py
DiplomProject/events/migrations/: 0001_initial.py  0002_remove_event_tags_comment.py  0003_rename_username_comment_user.py  0004_fotousers.py  0005_alter_fotousers_foto.py  0006_alter_fotousers_foto.py  0007_alter_fotousers_foto.py  0008_alter_fotousers_foto.py  0009_alter_fotousers_foto.py
DiplomProject/nginx/: default.conf
DiplomProject/templates/: footer.html  header.html
DiplomProject/templates/events/: add_comment_event.html  comments_form.html  comments_list.html  edit_event.html  edit_event_error.html  foto_album.html  foto_form.html  home.html  list.html  my_events.html  view_event.html  (+1 more)
DiplomProject/user/: admin.py  forms.py  models.py  urls.py  user_views.py
DiplomProject/ya_storage/: storage.py
Event/: db.sqlite3  pyproject.toml
Event/Event/: settings.py  urls.py  wsgi.py
Event/Events/: admin.py  email.py  forms.py  models.py  permisiion.py  serialilizers.py  tasks.py  views.py
Event/templates/: header.html  home.html  user_list.html
TMS_async_chat/: pyproject.toml  settings.py  sqlite.db
TMS_async_chat/users/: models.py  views.py
(+37 files in other folders)
