[tool.poetry]
name = "board1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
generic = "^1.1.1"
django-filter = "^23.2"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
