[tool.poetry]
name = "diplomproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2 = "^2.9.7"
django-filter = "^23.2"
path = "^16.7.1"
yadisk = "^1.3.3"
icrawler = "^0.6.7"
transaction = "^3.1.0"
crispy = "^0.7.4"
celery = "^5.3.4"
redis = "^5.0.0"
crontab = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
