[tool.poetry]
name = "TMS_async_chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

aiohttp-jinja2 = "^1.5.1"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
aiohttp-session = "^2.12.0"
aiohttp = "^3.8.5"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.19"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
